--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: 'Helsinki';
+    src:
+        url('../fonts/Helsinki.woff2') format('woff2'),
+        url('../fonts/Helsinki.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 @tailwind base;
 
 @tailwind components;
